add reset button for some sliders